--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/netinfo": "7.1.3",
+    "@react-native-async-storage/async-storage": "^1.16.3",
+    "@react-native-community/netinfo": "^7.1.3",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "aws-amplify": "^4.3.16",
+    "aws-amplify-react-native": "^6.0.3",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-blur": "~11.0.0",
